fix tables to shrink & overflow correctly

--- a/sass/_sheet.scss
+++ b/sass/_sheet.scss
@@ -473,6 +473,9 @@ pre {
 
 .content > table {
     @extend .table-style;
+    display: block;
+    max-width: 100%;
+    overflow-x: scroll;
 }
 
 blockquote {
